# test_mcp

./: pyproject.toml
src/test_mcp/: __init__.py  test_mcp.py
