[project]
name = "test-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bikal-netomi", email = "bikal@netomi.com" }
]
requires-python = ">=3.10"
dependencies = [    
    "mcp[cli]>=1.12.0",
]

[project.scripts]
test-mcp = "test_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
